<resources>
    <string name="app_name">Movie Box</string>
    <string name="logo">logo</string>
    <string name="sort_by_popularity">Most Popular</string>
    <string name="sort_by_rating">Top Rated</string>
    <string name="sort_by">Sort by</string>
    <string name="original_name_lbl">Original Name</string>
    <string name="overview_lbl">Overview</string>
    <string name="genres_lbl">Genres</string>
    <string name="popularity_lbl">Popularity</string>
    <string name="favs_lbl">Favorites</string>
    <string name="error_message">Oops , something went wrong</string>
    <string name="image_back_drop">image backdrop</string>
    <string name="image_poster">image poster</string>
    <string name="image_list">image list</string>
    <string name="add_to_fav_lbl">Add To Favorites</string>
    <string name="remove_to_fav_lbl">Remove From Favorites</string>
    <string name="go_to_reviews">See Reviews</string>
    <string name="reviews_error_message">No Reviews Available</string>
    <string name="no_trailers_text_message">No Trailers Available For This Movie</string>
    <string name="favorite_list_empty_message">No Movies Added To The List</string>
</resources>
