<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_original_name_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/original_name_lbl"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_original_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <View
        android:id="@+id/line_break_one"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_name"
        android:layout_marginBottom="8dp"
        android:background="@color/colorBlackTransparentLight" />

    <LinearLayout
        android:id="@+id/layout_popularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_break_one"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_popularity_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/popularity_lbl"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <View
        android:id="@+id/line_break_two"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_popularity"
        android:layout_marginBottom="8dp"
        android:background="@color/colorBlackTransparentLight" />

    <LinearLayout
        android:id="@+id/layout_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_break_two"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_genres_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genres_lbl"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <View
        android:id="@+id/line_break_three"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_genres"
        android:layout_marginBottom="8dp"
        android:background="@color/colorBlackTransparentLight" />

    <LinearLayout
        android:id="@+id/layout_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_genres"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_overview_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/overview_lbl"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_overview"
        android:background="@color/colorBlackTransparentLight" />

</RelativeLayout>