<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="0dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tv_original_name_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/original_name_lbl"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_original_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
    <View
        android:id="@+id/line_break_one"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlackTransparentLight"
        android:layout_below="@id/layout_name"
        android:layout_marginBottom="8dp"/>
    <LinearLayout
        android:id="@+id/layout_popularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/line_break_one"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/tv_popularity_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/popularity_lbl"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
    <View
        android:id="@+id/line_break_two"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlackTransparentLight"
        android:layout_below="@id/layout_popularity"
        android:layout_marginBottom="8dp"/>
    <LinearLayout
        android:id="@+id/layout_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/line_break_two"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/tv_genres_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genres_lbl"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
    <View
        android:id="@+id/line_break_three"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlackTransparentLight"
        android:layout_below="@id/layout_genres"
        android:layout_marginBottom="8dp"/>
    <LinearLayout
        android:id="@+id/layout_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layout_genres"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/tv_overview_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/overview_lbl"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlackTransparentLight"
        android:layout_below="@id/layout_overview"/>
</RelativeLayout>
